--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ footer {
 }
 
 .bg-loc-img {
-    background-image: url("location.jpg");
+    background-image: url("location.jpeg");
 
     background-position: center;
     background-repeat: no-repeat;
